@@ -6,7 +6,6 @@ package io.strimzi.operator.cluster.model;
 
 import io.fabric8.kubernetes.api.model.VolumeMount;
 import io.strimzi.api.kafka.model.CertAndKeySecretSource;
-import io.strimzi.api.kafka.model.CruiseControlSpec;
 import io.strimzi.api.kafka.model.KafkaAuthorization;
 import io.strimzi.api.kafka.model.KafkaAuthorizationCustom;
 import io.strimzi.api.kafka.model.KafkaAuthorizationKeycloak;
@@ -21,20 +20,24 @@ import io.strimzi.api.kafka.model.listener.KafkaListenerAuthenticationScramSha51
 import io.strimzi.api.kafka.model.listener.KafkaListenerAuthenticationTls;
 import io.strimzi.api.kafka.model.listener.arraylistener.GenericKafkaListener;
 import io.strimzi.api.kafka.model.listener.arraylistener.GenericKafkaListenerConfiguration;
+import io.strimzi.api.kafka.model.nodepool.ProcessRoles;
 import io.strimzi.kafka.oauth.server.ServerConfig;
 import io.strimzi.kafka.oauth.server.plain.ServerPlainConfig;
-import io.strimzi.operator.cluster.operator.resource.cruisecontrol.CruiseControlConfigurationParameters;
+import io.strimzi.operator.cluster.model.cruisecontrol.CruiseControlMetricsReporter;
+import io.strimzi.operator.common.model.cruisecontrol.CruiseControlConfigurationParameters;
 import io.strimzi.operator.common.Reconciliation;
 
 import java.io.PrintWriter;
 import java.io.StringWriter;
 import java.time.Duration;
 import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Locale;
-import java.util.Optional;
+import java.util.Set;
+import java.util.LinkedHashMap;
+import java.util.Map;
 import java.util.function.Function;
-import java.util.function.Supplier;
 import java.util.stream.Collectors;
 
 /**
@@ -48,18 +51,11 @@ public class KafkaBrokerConfigurationBuilder {
     private final static String REPLICATION_LISTENER_NAME = "REPLICATION-9091";
 
     // Names of environment variables placeholders replaced only in the running container
-    //       => needed both for shared and per-broker configuration
     private final static String PLACEHOLDER_CERT_STORE_PASSWORD = "${CERTS_STORE_PASSWORD}";
     private final static String PLACEHOLDER_RACK_ID = "${STRIMZI_RACK_ID}";
     private final static String PLACEHOLDER_OAUTH_CLIENT_SECRET = "${STRIMZI_%s_OAUTH_CLIENT_SECRET}";
 
-    // Names of environment variables placeholders replaced only in the running container
-    //       => needed only for shared configuration in StatefulSets
-    private final static String PLACEHOLDER_BROKER_ID = "${STRIMZI_BROKER_ID}";
-    private final static String PLACEHOLDER_ADVERTISED_HOSTNAME = "${STRIMZI_%s_ADVERTISED_HOSTNAME}";
-    private final static String PLACEHOLDER_ADVERTISED_PORT = "${STRIMZI_%s_ADVERTISED_PORT}";
-
-    // Additional replaceables are used in the configuration file for node port addresses. These are used for both
+    // Additional placeholders are used in the configuration file for node port addresses. These are used for both
     // per-broker and shared configurations. Listed here for reference only, they are constructed in the
     // KafkaAssemblyOperator class on the fly based on the user configuration.
     // * ${STRIMZI_NODEPORT_DEFAULT_ADDRESS}
@@ -72,71 +68,58 @@ public class KafkaBrokerConfigurationBuilder {
     private final StringWriter stringWriter = new StringWriter();
     private final PrintWriter writer = new PrintWriter(stringWriter);
     private final Reconciliation reconciliation;
-
-    private String brokerId = PLACEHOLDER_BROKER_ID;
+    private final String brokerId;
+    private final boolean useKRaft;
 
     /**
      * Broker configuration template constructor
      *
-     * @param reconciliation The reconciliation
+     * @param reconciliation    The reconciliation
+     * @param brokerId          The ID of the broker
+     * @param useKRaft          Indicates whether KRaft is used or not
      */
-    public KafkaBrokerConfigurationBuilder(Reconciliation reconciliation) {
+    public KafkaBrokerConfigurationBuilder(Reconciliation reconciliation, String brokerId, boolean useKRaft) {
         printHeader();
         this.reconciliation = reconciliation;
+        this.brokerId = brokerId;
+        this.useKRaft = useKRaft;
+
+        // Render the node/broker ID into the config file
+        configureNodeOrBrokerId();
     }
 
     /**
-     * Adds the broker ID template. This is used for the shared configuration which used the placeholder environment
-     * variable {@code STRIMZI_BROKER_ID}which replaced with the actual broker ID only in the broker container.
-     *
-     * @return Returns the builder instance
+     * Renders the broker.id or node.id configurations
      */
-    public KafkaBrokerConfigurationBuilder withBrokerId()   {
-        return withBrokerId(PLACEHOLDER_BROKER_ID);
-    }
+    private void configureNodeOrBrokerId()   {
+        printSectionHeader("Node / Broker ID");
 
-    /**
-     * Adds the broker ID used in this broker configuration. This is used for the per-broker configuration which
-     * contains directly the broker ID instead of a placeholder.
-     *
-     * @param desiredBrokerId   ID of the broker for which the configuration is generated
-     *
-     * @return Returns the builder instance
-     */
-    public KafkaBrokerConfigurationBuilder withBrokerId(String desiredBrokerId)   {
-        brokerId = desiredBrokerId;
-        printSectionHeader("Broker ID");
-        writer.println("broker.id=" + brokerId);
-        // Node ID is ignored when not using Kraft mode => but it defaults to broker ID when not set
-        // We set it here in the configuration explicitly to avoid never ending rolling updates
-        writer.println("node.id=" + brokerId);
+        if (useKRaft) {
+            writer.println("node.id=" + brokerId);
+        } else {
+            writer.println("broker.id=" + brokerId);
+            // Node ID is ignored when not using Kraft mode => but it defaults to broker ID when not set.
+            // We set it here in the configuration explicitly to avoid never ending rolling updates.
+            writer.println("node.id=" + brokerId);
+        }
 
         writer.println();
-
-        return this;
     }
 
     /**
      * Configures the Cruise Control metric reporter. It is set only if user enabled the Cruise Control.
      *
-     * @param clusterName Name of the cluster
-     * @param cruiseControl The Cruise Control configuration from the Kafka CR
-     * @param numPartitions The number of partitions specified in the Kafka config
-     * @param replicationFactor The replication factor specified in the Kafka config
-     * @param minInSyncReplicas The miniumum number of insync replicas that are needed in order for messages to be
-     *                          acknowleged.
+     * @param clusterName           Name of the Kafka cluster used to build the bootstrap address
+     * @param ccMetricsReporter     Cruise Control Metrics Reporter configuration
+     * @param isBroker              Flag indicating if this is broker (or controller)
      *
      * @return Returns the builder instance
      */
-    public KafkaBrokerConfigurationBuilder withCruiseControl(String clusterName, CruiseControlSpec cruiseControl, String numPartitions,
-                                                             String replicationFactor, String minInSyncReplicas)   {
-        if (cruiseControl != null) {
+    public KafkaBrokerConfigurationBuilder withCruiseControl(String clusterName, CruiseControlMetricsReporter ccMetricsReporter, boolean isBroker)   {
+        if (ccMetricsReporter != null && isBroker) {
             printSectionHeader("Cruise Control configuration");
-            String metricsTopicName = Optional.ofNullable(cruiseControl.getConfig())
-                    .map(config -> config.get(CruiseControlConfigurationParameters.METRIC_REPORTER_TOPIC_NAME.getValue()))
-                    .map(Object::toString)
-                    .orElse(CruiseControlConfigurationParameters.DEFAULT_METRIC_REPORTER_TOPIC_NAME);
-            writer.println(CruiseControlConfigurationParameters.METRICS_TOPIC_NAME + "=" + metricsTopicName);
+            writer.println(CruiseControlConfigurationParameters.METRICS_TOPIC_NAME + "=" + ccMetricsReporter.topicName());
+
             writer.println(CruiseControlConfigurationParameters.METRICS_REPORTER_SSL_ENDPOINT_ID_ALGO + "=HTTPS");
             // using the brokers service because the Admin client, in the Cruise Control metrics reporter, is not able to connect
             // to the pods behind the bootstrap one when they are not ready during startup.
@@ -149,20 +132,25 @@ public class KafkaBrokerConfigurationBuilder {
             writer.println(CruiseControlConfigurationParameters.METRICS_REPORTER_SSL_TRUSTSTORE_LOCATION + "=/tmp/kafka/cluster.truststore.p12");
             writer.println(CruiseControlConfigurationParameters.METRICS_REPORTER_SSL_TRUSTSTORE_PASSWORD + "=" + PLACEHOLDER_CERT_STORE_PASSWORD);
             writer.println(CruiseControlConfigurationParameters.METRICS_TOPIC_AUTO_CREATE + "=true");
-            if (numPartitions != null) {
-                writer.println(CruiseControlConfigurationParameters.METRICS_TOPIC_NUM_PARTITIONS + "=" + numPartitions);
+
+            if (ccMetricsReporter.numPartitions() != null) {
+                writer.println(CruiseControlConfigurationParameters.METRICS_TOPIC_NUM_PARTITIONS + "=" + ccMetricsReporter.numPartitions());
             }
-            if (replicationFactor != null) {
-                writer.println(CruiseControlConfigurationParameters.METRICS_TOPIC_REPLICATION_FACTOR + "=" + replicationFactor);
+
+            if (ccMetricsReporter.replicationFactor() != null) {
+                writer.println(CruiseControlConfigurationParameters.METRICS_TOPIC_REPLICATION_FACTOR + "=" + ccMetricsReporter.replicationFactor());
             }
-            if (minInSyncReplicas != null) {
-                writer.println(CruiseControlConfigurationParameters.METRICS_TOPIC_MIN_ISR + "=" + minInSyncReplicas);
+
+            if (ccMetricsReporter.minInSyncReplicas() != null) {
+                writer.println(CruiseControlConfigurationParameters.METRICS_TOPIC_MIN_ISR + "=" + ccMetricsReporter.minInSyncReplicas());
             }
+
             writer.println();
         }
 
         return this;
     }
+
     /**
      * Adds the template for the {@code rack.id}. The rack ID will be set in the container based on the value of the
      * {@code STRIMZI_RACK_ID} env var. It is set only if user enabled the rack awareness-
@@ -210,19 +198,23 @@ public class KafkaBrokerConfigurationBuilder {
      *
      * @param clusterName   Name of the cluster (important for the advertised hostnames)
      * @param namespace     Namespace (important for generating the advertised hostname)
-     * @param replicas      Number of replicas to configure the KRaft quorum
+     * @param kraftRoles    KRaft process roles which this node will take
+     * @param nodes         Set of node references for configuring the KRaft quorum
      *
      * @return Returns the builder instance
      */
-    public KafkaBrokerConfigurationBuilder withKRaft(String clusterName, String namespace, int replicas)   {
+    public KafkaBrokerConfigurationBuilder withKRaft(String clusterName, String namespace, Set<ProcessRoles> kraftRoles, Set<NodeRef> nodes)   {
         printSectionHeader("KRaft configuration");
-        writer.println("process.roles=broker,controller");
+        writer.println("process.roles=" + kraftRoles.stream().map(role -> role.toValue()).sorted().collect(Collectors.joining(",")));
         writer.println("controller.listener.names=" + CONTROL_PLANE_LISTENER_NAME);
 
-        List<String> quorum = new ArrayList<>(replicas);
-        for (int i = 0; i < replicas; i++)  {
-            quorum.add(i + "@" + DnsNameGenerator.podDnsName(namespace, KafkaResources.brokersServiceName(clusterName), KafkaResources.kafkaStatefulSetName(clusterName) + "-" + i) + ":9090");
-        }
+        // Generates the controllers quorum list
+        // The list should be sorted to avoid random changes to the generated configuration file
+        List<String> quorum = nodes.stream()
+                .filter(NodeRef::controller)
+                .sorted(Comparator.comparingInt(NodeRef::nodeId))
+                .map(node -> String.format("%s@%s:9090", node.nodeId(), DnsNameGenerator.podDnsName(namespace, KafkaResources.brokersServiceName(clusterName), node.podName())))
+                .toList();
 
         writer.println("controller.quorum.voters=" + String.join(",", quorum));
 
@@ -232,116 +224,107 @@ public class KafkaBrokerConfigurationBuilder {
     }
 
     /**
-     * Configures the listeners based on the listeners enabled by the users in the Kafka CR. This is used to generate
-     * the shared configuration which uses placeholders instead of the actual advertised addresses.
-     *
-     * @param clusterName    Name of the cluster (important for the advertised hostnames)
-     * @param namespace      Namespace (important for generating the advertised hostname)
-     * @param kafkaListeners The listeners configuration from the Kafka CR
-     *
-     * @return Returns the builder instance
-     */
-    public KafkaBrokerConfigurationBuilder withListeners(String clusterName, String namespace, List<GenericKafkaListener> kafkaListeners)  {
-        return withListeners(clusterName,
-                namespace,
-                kafkaListeners,
-                () -> KafkaResources.kafkaStatefulSetName(clusterName) + "-" + brokerId,
-                (listenerId) -> String.format(PLACEHOLDER_ADVERTISED_HOSTNAME, listenerId),
-                (listenerId) -> String.format(PLACEHOLDER_ADVERTISED_PORT, listenerId),
-                false);
-    }
-
-    /**
      * Configures the listeners based on the listeners enabled by the users in the Kafka CR. This method is used to
      * generate the per-broker configuration which uses actual broker IDs and addresses instead of just placeholders.
      *
      * @param clusterName                Name of the cluster (important for the advertised hostnames)
      * @param namespace                  Namespace (important for generating the advertised hostname)
+     * @param node                       Node reference describing the node for which we generate the configuration
      * @param kafkaListeners             The listeners configuration from the Kafka CR
-     * @param podNameProvider            Lambda method which provides the name of the pod for which this configuration
-     *                                   is used. This is needed to configure the replication and control plane listeners.
      * @param advertisedHostnameProvider Lambda method which provides the advertised hostname for given listener and
      *                                   broker. This is used to configure the user-configurable listeners.
      * @param advertisedPortProvider     Lambda method which provides the advertised port for given listener and broker.
      *                                   This is used to configure the user-configurable listeners.
-     * @param useKRaft                   Use KRaft mode in the configuration
      *
      * @return Returns the builder instance
      */
     public KafkaBrokerConfigurationBuilder withListeners(
-            String clusterName, String namespace,
+            String clusterName,
+            String namespace,
+            NodeRef node,
             List<GenericKafkaListener> kafkaListeners,
-            Supplier<String> podNameProvider,
             Function<String, String> advertisedHostnameProvider,
-            Function<String, String> advertisedPortProvider,
-            boolean useKRaft
+            Function<String, String> advertisedPortProvider
     )  {
         List<String> listeners = new ArrayList<>();
         List<String> advertisedListeners = new ArrayList<>();
         List<String> securityProtocol = new ArrayList<>();
 
-        // Control Plane listener
-        listeners.add(CONTROL_PLANE_LISTENER_NAME + "://0.0.0.0:9090");
-        if (!useKRaft) {
-            advertisedListeners.add(String.format("%s://%s:9090",
-                    CONTROL_PLANE_LISTENER_NAME,
-                    // Pod name constructed to be templatable for each individual ordinal
-                    DnsNameGenerator.podDnsNameWithoutClusterDomain(namespace, KafkaResources.brokersServiceName(clusterName),
-                            podNameProvider.get())
-            ));
+        boolean isKraftControllerOnly = useKRaft && node.controller() && !node.broker();
+        boolean isKraftBrokerOnly = useKRaft && node.broker() && !node.controller();
+
+        // Control Plane listener => ZooKeeper based brokers and KRaft controllers (including mixed nodes). But not on KRaft broker only nodes
+        if (!isKraftBrokerOnly) {
+            listeners.add(CONTROL_PLANE_LISTENER_NAME + "://0.0.0.0:9090");
+
+            if (!useKRaft) {
+                advertisedListeners.add(String.format("%s://%s:9090",
+                        CONTROL_PLANE_LISTENER_NAME,
+                        // Pod name constructed to be templatable for each individual ordinal
+                        DnsNameGenerator.podDnsNameWithoutClusterDomain(namespace, KafkaResources.brokersServiceName(clusterName), node.podName())
+                ));
+            }
         }
+
+        // Security protocol and Control Plane Listener are configured everywhere
         securityProtocol.add(CONTROL_PLANE_LISTENER_NAME + ":SSL");
         configureControlPlaneListener();
 
-        // Replication listener
-        listeners.add(REPLICATION_LISTENER_NAME + "://0.0.0.0:9091");
-        advertisedListeners.add(String.format("%s://%s:9091",
-                REPLICATION_LISTENER_NAME,
-                // Pod name constructed to be templatable for each individual ordinal
-                DnsNameGenerator.podDnsNameWithoutClusterDomain(namespace, KafkaResources.brokersServiceName(clusterName),
-                        podNameProvider.get())
-        ));
-        securityProtocol.add(REPLICATION_LISTENER_NAME + ":SSL");
-        configureReplicationListener();
+        // Non-controller listeners are used only on ZooKeeper based brokers or KRaft brokers (including mixed nodes)
+        if (!isKraftControllerOnly) {
+            // Replication listener
+            listeners.add(REPLICATION_LISTENER_NAME + "://0.0.0.0:9091");
+            advertisedListeners.add(String.format("%s://%s:9091",
+                    REPLICATION_LISTENER_NAME,
+                    // Pod name constructed to be templatable for each individual ordinal
+                    DnsNameGenerator.podDnsNameWithoutClusterDomain(namespace, KafkaResources.brokersServiceName(clusterName), node.podName())
+            ));
+            securityProtocol.add(REPLICATION_LISTENER_NAME + ":SSL");
+            configureReplicationListener();
 
-        for (GenericKafkaListener listener : kafkaListeners) {
-            int port = listener.getPort();
-            String listenerName = ListenersUtils.identifier(listener).toUpperCase(Locale.ENGLISH);
-            String envVarListenerName = ListenersUtils.envVarIdentifier(listener);
+            for (GenericKafkaListener listener : kafkaListeners) {
+                int port = listener.getPort();
+                String listenerName = ListenersUtils.identifier(listener).toUpperCase(Locale.ENGLISH);
+                String envVarListenerName = ListenersUtils.envVarIdentifier(listener);
 
-            printSectionHeader("Listener configuration: " + listenerName);
+                printSectionHeader("Listener configuration: " + listenerName);
 
-            listeners.add(listenerName + "://0.0.0.0:" + port);
-            advertisedListeners.add(String.format("%s://%s:%s", listenerName, advertisedHostnameProvider.apply(envVarListenerName), advertisedPortProvider.apply(envVarListenerName)));
-            configureAuthentication(listenerName, securityProtocol, listener.isTls(), listener.getAuth());
-            configureListener(listenerName, listener.getConfiguration());
+                listeners.add(listenerName + "://0.0.0.0:" + port);
+                advertisedListeners.add(String.format("%s://%s:%s", listenerName, advertisedHostnameProvider.apply(envVarListenerName), advertisedPortProvider.apply(envVarListenerName)));
+                configureAuthentication(listenerName, securityProtocol, listener.isTls(), listener.getAuth());
+                configureListener(listenerName, listener.getConfiguration());
 
-            if (listener.isTls())   {
-                CertAndKeySecretSource customServerCert = null;
-                if (listener.getConfiguration() != null) {
-                    customServerCert = listener.getConfiguration().getBrokerCertChainAndKey();
+                if (listener.isTls()) {
+                    CertAndKeySecretSource customServerCert = null;
+                    if (listener.getConfiguration() != null) {
+                        customServerCert = listener.getConfiguration().getBrokerCertChainAndKey();
+                    }
+
+                    configureTls(listenerName, customServerCert);
                 }
 
-                configureTls(listenerName, customServerCert);
+                writer.println();
             }
 
-            writer.println();
+            configureOAuthPrincipalBuilderIfNeeded(writer, kafkaListeners);
         }
 
-        configureOAuthPrincipalBuilderIfNeeded(writer, kafkaListeners);
-
         printSectionHeader("Common listener configuration");
-        writer.println("listeners=" + String.join(",", listeners));
-        writer.println("advertised.listeners=" + String.join(",", advertisedListeners));
         writer.println("listener.security.protocol.map=" + String.join(",", securityProtocol));
+        writer.println("listeners=" + String.join(",", listeners));
 
+        // Advertised listeners are not allowed on KRaft nodes with controller only role
+        if (!isKraftControllerOnly) {
+            writer.println("advertised.listeners=" + String.join(",", advertisedListeners));
+            writer.println("inter.broker.listener.name=" + REPLICATION_LISTENER_NAME);
+        }
+
+        // Control plane listener is on all ZooKeeper based brokers or on KRaft nodes with only the broker role (i.e. not mixed nodes)
         if (!useKRaft) {
             writer.println("control.plane.listener.name=" + CONTROL_PLANE_LISTENER_NAME);
         }
 
-        writer.println("inter.broker.listener.name=" + REPLICATION_LISTENER_NAME);
         writer.println("sasl.enabled.mechanisms=");
-        writer.println("ssl.secure.random.implementation=SHA1PRNG");
         writer.println("ssl.endpoint.identification.algorithm=HTTPS");
         writer.println();
 
@@ -366,14 +349,7 @@ public class KafkaBrokerConfigurationBuilder {
         final String controlPlaneListenerName = CONTROL_PLANE_LISTENER_NAME.toLowerCase(Locale.ENGLISH);
 
         printSectionHeader("Control Plane listener");
-        writer.println("listener.name." + controlPlaneListenerName + ".ssl.keystore.location=/tmp/kafka/cluster.keystore.p12");
-        writer.println("listener.name." + controlPlaneListenerName + ".ssl.keystore.password=" + PLACEHOLDER_CERT_STORE_PASSWORD);
-        writer.println("listener.name." + controlPlaneListenerName + ".ssl.keystore.type=PKCS12");
-        writer.println("listener.name." + controlPlaneListenerName + ".ssl.truststore.location=/tmp/kafka/cluster.truststore.p12");
-        writer.println("listener.name." + controlPlaneListenerName + ".ssl.truststore.password=" + PLACEHOLDER_CERT_STORE_PASSWORD);
-        writer.println("listener.name." + controlPlaneListenerName + ".ssl.truststore.type=PKCS12");
-        writer.println("listener.name." + controlPlaneListenerName + ".ssl.client.auth=required");
-        writer.println();
+        configureListener(controlPlaneListenerName);
     }
 
     /**
@@ -384,13 +360,23 @@ public class KafkaBrokerConfigurationBuilder {
         final String replicationListenerName = REPLICATION_LISTENER_NAME.toLowerCase(Locale.ENGLISH);
 
         printSectionHeader("Replication listener");
-        writer.println("listener.name." + replicationListenerName + ".ssl.keystore.location=/tmp/kafka/cluster.keystore.p12");
-        writer.println("listener.name." + replicationListenerName + ".ssl.keystore.password=" + PLACEHOLDER_CERT_STORE_PASSWORD);
-        writer.println("listener.name." + replicationListenerName + ".ssl.keystore.type=PKCS12");
-        writer.println("listener.name." + replicationListenerName + ".ssl.truststore.location=/tmp/kafka/cluster.truststore.p12");
-        writer.println("listener.name." + replicationListenerName + ".ssl.truststore.password=" + PLACEHOLDER_CERT_STORE_PASSWORD);
-        writer.println("listener.name." + replicationListenerName + ".ssl.truststore.type=PKCS12");
-        writer.println("listener.name." + replicationListenerName + ".ssl.client.auth=required");
+        configureListener(replicationListenerName);
+    }
+
+    /**
+     * Internal method which generates the configuration of the internal replication or control plane listener which use
+     * the same TLS configuration and differ only on the listener name.
+     *
+     * @param listenerName  Name of the listener
+     */
+    private void configureListener(String listenerName) {
+        writer.println("listener.name." + listenerName + ".ssl.keystore.location=/tmp/kafka/cluster.keystore.p12");
+        writer.println("listener.name." + listenerName + ".ssl.keystore.password=" + PLACEHOLDER_CERT_STORE_PASSWORD);
+        writer.println("listener.name." + listenerName + ".ssl.keystore.type=PKCS12");
+        writer.println("listener.name." + listenerName + ".ssl.truststore.location=/tmp/kafka/cluster.truststore.p12");
+        writer.println("listener.name." + listenerName + ".ssl.truststore.password=" + PLACEHOLDER_CERT_STORE_PASSWORD);
+        writer.println("listener.name." + listenerName + ".ssl.truststore.type=PKCS12");
+        writer.println("listener.name." + listenerName + ".ssl.client.auth=required");
         writer.println();
     }
 
@@ -417,7 +403,7 @@ public class KafkaBrokerConfigurationBuilder {
     /**
      * Configures TLS for a specific listener. This method is used only internally.
      *
-     * @param listenerName  The name of the listener under which it is used in the KAfka broker configuration file
+     * @param listenerName  The name of the listener under which it is used in the Kafka broker configuration file
      * @param serverCertificate The custom certificate configuration (null if not specified by the user in the Kafka CR)
      */
     private void configureTls(String listenerName, CertAndKeySecretSource serverCertificate) {
@@ -439,47 +425,52 @@ public class KafkaBrokerConfigurationBuilder {
      * Configures authentication for a Kafka listener. This method is used only internally.
      *
      * @param listenerName  Name of the listener as used in the Kafka broker configuration file.
-     * @param securityProtocol  List of security protocols enabled int he broker. The method will add the security
+     * @param securityProtocol  List of security protocols enabled in the broker. The method will add the security
      *                          protocol configuration for this listener to this list (e.g. SASL_PLAINTEXT).
      * @param tls   Flag whether this protocol is using TLS or not
-     * @param auth  The authentication confgiuration from the Kafka CR
+     * @param auth  The authentication configuration from the Kafka CR
      */
     private void configureAuthentication(String listenerName, List<String> securityProtocol, boolean tls, KafkaListenerAuthentication auth)    {
         String listenerNameInProperty = listenerName.toLowerCase(Locale.ENGLISH);
         String listenerNameInEnvVar = listenerName.replace("-", "_");
 
-        if (auth instanceof KafkaListenerAuthenticationOAuth) {
+        if (auth instanceof KafkaListenerAuthenticationOAuth oauth) {
             securityProtocol.add(String.format("%s:%s", listenerName, getSecurityProtocol(tls, true)));
 
-            KafkaListenerAuthenticationOAuth oauth = (KafkaListenerAuthenticationOAuth) auth;
-            List<String> options = new ArrayList<>();
-            options.addAll(getOAuthOptions(oauth));
+            Map<String, String> jaasOptions = new LinkedHashMap<>(getOAuthOptions(oauth));
+            addOptionIfNotNull(jaasOptions, "oauth.config.id", listenerName);
 
             if (oauth.getClientSecret() != null)    {
-                options.add(String.format("oauth.client.secret=\"" + PLACEHOLDER_OAUTH_CLIENT_SECRET + "\"", listenerNameInEnvVar));
+                addOptionIfNotNull(jaasOptions, "oauth.client.secret", String.format(PLACEHOLDER_OAUTH_CLIENT_SECRET, listenerNameInEnvVar));
             }
 
             if (oauth.getTlsTrustedCertificates() != null && oauth.getTlsTrustedCertificates().size() > 0)    {
-                options.add(String.format("oauth.ssl.truststore.location=\"/tmp/kafka/oauth-%s.truststore.p12\"", listenerNameInProperty));
-                options.add("oauth.ssl.truststore.password=\"" + PLACEHOLDER_CERT_STORE_PASSWORD + "\"");
-                options.add("oauth.ssl.truststore.type=\"PKCS12\"");
+                addOptionIfNotNull(jaasOptions, "oauth.ssl.truststore.location", String.format("/tmp/kafka/oauth-%s.truststore.p12", listenerNameInProperty));
+                addOptionIfNotNull(jaasOptions, "oauth.ssl.truststore.password", PLACEHOLDER_CERT_STORE_PASSWORD);
+                addOptionIfNotNull(jaasOptions, "oauth.ssl.truststore.type", "PKCS12");
             }
 
             StringBuilder enabledMechanisms = new StringBuilder();
             if (oauth.isEnableOauthBearer()) {
                 writer.println(String.format("listener.name.%s.oauthbearer.sasl.server.callback.handler.class=io.strimzi.kafka.oauth.server.JaasServerOauthValidatorCallbackHandler", listenerNameInProperty));
-                writer.println(String.format("listener.name.%s.oauthbearer.sasl.jaas.config=org.apache.kafka.common.security.oauthbearer.OAuthBearerLoginModule required unsecuredLoginStringClaim_sub=\"thePrincipalName\" %s;", listenerNameInProperty, String.join(" ", options)));
+                var oauthBearerOptions = new LinkedHashMap<String, String>();
+                addOptionIfNotNull(oauthBearerOptions, "unsecuredLoginStringClaim_sub", "thePrincipalName");
+                oauthBearerOptions.putAll(jaasOptions);
+                writer.println(String.format("listener.name.%s.oauthbearer.sasl.jaas.config=%s", listenerNameInProperty,
+                        AuthenticationUtils.jaasConfig("org.apache.kafka.common.security.oauthbearer.OAuthBearerLoginModule", oauthBearerOptions)));
                 enabledMechanisms.append("OAUTHBEARER");
             }
 
             if (oauth.isEnablePlain()) {
-                addOption(options, ServerPlainConfig.OAUTH_TOKEN_ENDPOINT_URI, oauth.getTokenEndpointUri());
+                addOptionIfNotNull(jaasOptions, ServerPlainConfig.OAUTH_TOKEN_ENDPOINT_URI, oauth.getTokenEndpointUri());
                 writer.println(String.format("listener.name.%s.plain.sasl.server.callback.handler.class=io.strimzi.kafka.oauth.server.plain.JaasServerOauthOverPlainValidatorCallbackHandler", listenerNameInProperty));
-                writer.println(String.format("listener.name.%s.plain.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required %s;", listenerNameInProperty, String.join(" ", options)));
+                writer.println(String.format("listener.name.%s.plain.sasl.jaas.config=%s", listenerNameInProperty,
+                        AuthenticationUtils.jaasConfig("org.apache.kafka.common.security.plain.PlainLoginModule", jaasOptions)));
                 if (enabledMechanisms.length() > 0) {
                     enabledMechanisms.append(",");
                 }
                 enabledMechanisms.append("PLAIN");
+
             }
 
             writer.println(String.format("listener.name.%s.sasl.enabled.mechanisms=%s", listenerNameInProperty, enabledMechanisms));
@@ -490,8 +481,8 @@ public class KafkaBrokerConfigurationBuilder {
             writer.println();
         } else if (auth instanceof KafkaListenerAuthenticationScramSha512) {
             securityProtocol.add(String.format("%s:%s", listenerName, getSecurityProtocol(tls, true)));
-
-            writer.println(String.format("listener.name.%s.scram-sha-512.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required;", listenerNameInProperty));
+            writer.println(String.format("listener.name.%s.scram-sha-512.sasl.jaas.config=%s", listenerNameInProperty,
+                    AuthenticationUtils.jaasConfig("org.apache.kafka.common.security.scram.ScramLoginModule", Map.of())));
             writer.println(String.format("listener.name.%s.sasl.enabled.mechanisms=SCRAM-SHA-512", listenerNameInProperty));
             writer.println();
         } else if (auth instanceof KafkaListenerAuthenticationTls) {
@@ -502,8 +493,7 @@ public class KafkaBrokerConfigurationBuilder {
             writer.println(String.format("listener.name.%s.ssl.truststore.password=%s", listenerNameInProperty, PLACEHOLDER_CERT_STORE_PASSWORD));
             writer.println(String.format("listener.name.%s.ssl.truststore.type=PKCS12", listenerNameInProperty));
             writer.println();
-        } else if (auth instanceof KafkaListenerAuthenticationCustom) {
-            KafkaListenerAuthenticationCustom customAuth = (KafkaListenerAuthenticationCustom) auth;
+        } else if (auth instanceof KafkaListenerAuthenticationCustom customAuth) {
             securityProtocol.add(String.format("%s:%s", listenerName, getSecurityProtocol(tls, customAuth.isSasl())));
             KafkaListenerCustomAuthConfiguration config = new KafkaListenerCustomAuthConfiguration(reconciliation, customAuth.getListenerConfig().entrySet());
             config.asOrderedProperties().asMap().forEach((key, value) -> writer.println(String.format("listener.name.%s.%s=%s", listenerNameInProperty, key, value)));
@@ -532,76 +522,94 @@ public class KafkaBrokerConfigurationBuilder {
      * @param oauth     OAuth type authentication object
      * @return  Returns the builder instance
      */
-    /*test*/ static List<String> getOAuthOptions(KafkaListenerAuthenticationOAuth oauth)  {
-        List<String> options = new ArrayList<>(5);
+    /*test*/ static Map<String, String> getOAuthOptions(KafkaListenerAuthenticationOAuth oauth)  {
+        Map<String, String> options = new LinkedHashMap<>();
 
-        addOption(options, ServerConfig.OAUTH_CLIENT_ID, oauth.getClientId());
-        addOption(options, ServerConfig.OAUTH_VALID_ISSUER_URI, oauth.getValidIssuerUri());
+        addOptionIfNotNull(options, ServerConfig.OAUTH_CLIENT_ID, oauth.getClientId());
+        addOptionIfNotNull(options, ServerConfig.OAUTH_VALID_ISSUER_URI, oauth.getValidIssuerUri());
         addBooleanOptionIfFalse(options, ServerConfig.OAUTH_CHECK_ISSUER, oauth.isCheckIssuer());
         addBooleanOptionIfTrue(options, ServerConfig.OAUTH_CHECK_AUDIENCE, oauth.isCheckAudience());
-        addOption(options, ServerConfig.OAUTH_CUSTOM_CLAIM_CHECK, oauth.getCustomClaimCheck());
-        addOption(options, ServerConfig.OAUTH_SCOPE, oauth.getClientScope());
-        addOption(options, ServerConfig.OAUTH_AUDIENCE, oauth.getClientAudience());
-        addOption(options, ServerConfig.OAUTH_JWKS_ENDPOINT_URI, oauth.getJwksEndpointUri());
+        addOptionIfNotNull(options, ServerConfig.OAUTH_CUSTOM_CLAIM_CHECK, oauth.getCustomClaimCheck());
+        addOptionIfNotNull(options, ServerConfig.OAUTH_SCOPE, oauth.getClientScope());
+        addOptionIfNotNull(options, ServerConfig.OAUTH_AUDIENCE, oauth.getClientAudience());
+        addOptionIfNotNull(options, ServerConfig.OAUTH_JWKS_ENDPOINT_URI, oauth.getJwksEndpointUri());
         if (oauth.getJwksRefreshSeconds() != null && oauth.getJwksRefreshSeconds() > 0) {
-            addOption(options, ServerConfig.OAUTH_JWKS_REFRESH_SECONDS, String.valueOf(oauth.getJwksRefreshSeconds()));
+            addOptionIfNotNull(options, ServerConfig.OAUTH_JWKS_REFRESH_SECONDS, String.valueOf(oauth.getJwksRefreshSeconds()));
         }
         if (oauth.getJwksRefreshSeconds() != null && oauth.getJwksExpirySeconds() > 0) {
-            addOption(options, ServerConfig.OAUTH_JWKS_EXPIRY_SECONDS, String.valueOf(oauth.getJwksExpirySeconds()));
+            addOptionIfNotNull(options, ServerConfig.OAUTH_JWKS_EXPIRY_SECONDS, String.valueOf(oauth.getJwksExpirySeconds()));
         }
         if (oauth.getJwksMinRefreshPauseSeconds() != null && oauth.getJwksMinRefreshPauseSeconds() >= 0) {
-            addOption(options, ServerConfig.OAUTH_JWKS_REFRESH_MIN_PAUSE_SECONDS, String.valueOf(oauth.getJwksMinRefreshPauseSeconds()));
+            addOptionIfNotNull(options, ServerConfig.OAUTH_JWKS_REFRESH_MIN_PAUSE_SECONDS, String.valueOf(oauth.getJwksMinRefreshPauseSeconds()));
         }
-        addOption(options, ServerConfig.OAUTH_INTROSPECTION_ENDPOINT_URI, oauth.getIntrospectionEndpointUri());
-        addOption(options, ServerConfig.OAUTH_USERINFO_ENDPOINT_URI, oauth.getUserInfoEndpointUri());
-        addOption(options, ServerConfig.OAUTH_USERNAME_CLAIM, oauth.getUserNameClaim());
-        addOption(options, ServerConfig.OAUTH_FALLBACK_USERNAME_CLAIM, oauth.getFallbackUserNameClaim());
-        addOption(options, ServerConfig.OAUTH_FALLBACK_USERNAME_PREFIX, oauth.getFallbackUserNamePrefix());
-        addOption(options, ServerConfig.OAUTH_GROUPS_CLAIM, oauth.getGroupsClaim());
-        addOption(options, ServerConfig.OAUTH_GROUPS_CLAIM_DELIMITER, oauth.getGroupsClaimDelimiter());
+        addBooleanOptionIfTrue(options, ServerConfig.OAUTH_JWKS_IGNORE_KEY_USE, oauth.getJwksIgnoreKeyUse());
+        addOptionIfNotNull(options, ServerConfig.OAUTH_INTROSPECTION_ENDPOINT_URI, oauth.getIntrospectionEndpointUri());
+        addOptionIfNotNull(options, ServerConfig.OAUTH_USERINFO_ENDPOINT_URI, oauth.getUserInfoEndpointUri());
+        addOptionIfNotNull(options, ServerConfig.OAUTH_USERNAME_CLAIM, oauth.getUserNameClaim());
+        addOptionIfNotNull(options, ServerConfig.OAUTH_FALLBACK_USERNAME_CLAIM, oauth.getFallbackUserNameClaim());
+        addOptionIfNotNull(options, ServerConfig.OAUTH_FALLBACK_USERNAME_PREFIX, oauth.getFallbackUserNamePrefix());
+        addOptionIfNotNull(options, ServerConfig.OAUTH_GROUPS_CLAIM, oauth.getGroupsClaim());
+        addOptionIfNotNull(options, ServerConfig.OAUTH_GROUPS_CLAIM_DELIMITER, oauth.getGroupsClaimDelimiter());
         addBooleanOptionIfFalse(options, ServerConfig.OAUTH_ACCESS_TOKEN_IS_JWT, oauth.isAccessTokenIsJwt());
         addBooleanOptionIfFalse(options, ServerConfig.OAUTH_CHECK_ACCESS_TOKEN_TYPE, oauth.isCheckAccessTokenType());
-        addOption(options, ServerConfig.OAUTH_VALID_TOKEN_TYPE, oauth.getValidTokenType());
+        addOptionIfNotNull(options, ServerConfig.OAUTH_VALID_TOKEN_TYPE, oauth.getValidTokenType());
 
         if (oauth.isDisableTlsHostnameVerification()) {
-            addOption(options, ServerConfig.OAUTH_SSL_ENDPOINT_IDENTIFICATION_ALGORITHM, "");
+            addOptionIfNotNull(options, ServerConfig.OAUTH_SSL_ENDPOINT_IDENTIFICATION_ALGORITHM, "");
         }
 
         if (oauth.getConnectTimeoutSeconds() != null && oauth.getConnectTimeoutSeconds() > 0) {
-            addOption(options, ServerConfig.OAUTH_CONNECT_TIMEOUT_SECONDS, String.valueOf(oauth.getConnectTimeoutSeconds()));
+            addOptionIfNotNull(options, ServerConfig.OAUTH_CONNECT_TIMEOUT_SECONDS, String.valueOf(oauth.getConnectTimeoutSeconds()));
         }
         if (oauth.getReadTimeoutSeconds() != null && oauth.getReadTimeoutSeconds() > 0) {
-            addOption(options, ServerConfig.OAUTH_READ_TIMEOUT_SECONDS, String.valueOf(oauth.getReadTimeoutSeconds()));
+            addOptionIfNotNull(options, ServerConfig.OAUTH_READ_TIMEOUT_SECONDS, String.valueOf(oauth.getReadTimeoutSeconds()));
         }
+        if (oauth.getHttpRetries() != null && oauth.getHttpRetries() > 0) {
+            addOptionIfNotNull(options, ServerConfig.OAUTH_HTTP_RETRIES, String.valueOf(oauth.getHttpRetries()));
+        }
+        if (oauth.getHttpRetryPauseMs() != null && oauth.getHttpRetryPauseMs() > 0) {
+            addOptionIfNotNull(options, ServerConfig.OAUTH_HTTP_RETRY_PAUSE_MILLIS, String.valueOf(oauth.getHttpRetryPauseMs()));
+        }
+
+        addBooleanOptionIfTrue(options, ServerConfig.OAUTH_ENABLE_METRICS, oauth.isEnableMetrics());
+        addBooleanOptionIfFalse(options, ServerConfig.OAUTH_FAIL_FAST, oauth.getFailFast());
+
         return options;
     }
 
-    static void addOption(List<String> options, String option, String value) {
-        if (value != null) options.add(String.format("%s=\"%s\"", option, value));
+    static void addOptionIfNotNull(Map<String, String> options, String option, String value) {
+        if (value != null) {
+            options.put(option, value);
+        }
     }
 
-    static void addBooleanOptionIfTrue(List<String> options, String option, boolean value) {
-        if (value) options.add(String.format("%s=\"%s\"", option, value));
+    static void addBooleanOptionIfTrue(Map<String, String> options, String option, boolean value) {
+        if (value) {
+            options.put(option, String.valueOf(true));
+        }
     }
 
-    static void addBooleanOptionIfFalse(List<String> options, String option, boolean value) {
-        if (!value) options.add(String.format("%s=\"%s\"", option, value));
+    static void addBooleanOptionIfFalse(Map<String, String> options, String option, boolean value) {
+        if (!value) {
+            options.put(option, String.valueOf(false));
+        }
     }
 
-    static void addOption(PrintWriter writer, String name, Object value) {
-        if (value != null) writer.println(name + "=" + value);
+    static void addOptionIfNotNull(PrintWriter writer, String name, Object value) {
+        if (value != null) {
+            writer.println(name + "=" + value);
+        }
     }
 
     /**
      * Configures authorization for the Kafka cluster.
      *
-     * @param clusterName   The name of the cluster (used to configure the replication super users)
+     * @param clusterName   The name of the cluster (used to configure the replication super-users)
      * @param authorization The authorization configuration from the Kafka CR
-     * @param useKRaft      Use KRaft mode in the configuration
      *
      * @return  Returns the builder instance
      */
-    public KafkaBrokerConfigurationBuilder withAuthorization(String clusterName, KafkaAuthorization authorization, boolean useKRaft)  {
+    public KafkaBrokerConfigurationBuilder withAuthorization(String clusterName, KafkaAuthorization authorization)  {
         if (authorization != null) {
             List<String> superUsers = new ArrayList<>();
 
@@ -627,87 +635,158 @@ public class KafkaBrokerConfigurationBuilder {
      * Configures authorization for the Kafka brokers. This method is used only internally.
      *
      * @param clusterName Name of the cluster
-     * @param superUsers Super users list who have all the rights on the cluster
+     * @param superUsers Super-users list who have all the rights on the cluster
      * @param authorization The authorization configuration from the Kafka CR
      * @param useKRaft      Use KRaft mode in the configuration
      */
     private void configureAuthorization(String clusterName, List<String> superUsers, KafkaAuthorization authorization, boolean useKRaft) {
-        if (KafkaAuthorizationSimple.TYPE_SIMPLE.equals(authorization.getType())) {
-            KafkaAuthorizationSimple simpleAuthz = (KafkaAuthorizationSimple) authorization;
+        if (authorization instanceof KafkaAuthorizationSimple simpleAuthz) {
+            configureSimpleAuthorization(simpleAuthz, superUsers, useKRaft);
+        } else if (authorization instanceof KafkaAuthorizationOpa opaAuthz) {
+            configureOpaAuthorization(opaAuthz, superUsers);
+        } else if (authorization instanceof KafkaAuthorizationKeycloak keycloakAuthz) {
+            configureKeycloakAuthorization(clusterName, keycloakAuthz, superUsers);
+        } else if (authorization instanceof KafkaAuthorizationCustom customAuthz) {
+            configureCustomAuthorization(customAuthz, superUsers);
+        }
+    }
 
-            if (useKRaft) {
-                writer.println("authorizer.class.name=" + KafkaAuthorizationSimple.KRAFT_AUTHORIZER_CLASS_NAME);
-                writer.println("early.start.listeners=" + String.join(",", List.of(CONTROL_PLANE_LISTENER_NAME, REPLICATION_LISTENER_NAME)));
-            } else {
-                writer.println("authorizer.class.name=" + KafkaAuthorizationSimple.AUTHORIZER_CLASS_NAME);
-            }
+    /**
+     * Configures Simple authorization
+     *
+     * @param authorization     Simple authorization configuration
+     * @param superUsers        Super-users list who have all the rights on the cluster
+     * @param useKRaft          Use KRaft mode in the configuration
+     */
+    private void configureSimpleAuthorization(KafkaAuthorizationSimple authorization, List<String> superUsers, boolean useKRaft) {
+        if (useKRaft) {
+            writer.println("authorizer.class.name=" + KafkaAuthorizationSimple.KRAFT_AUTHORIZER_CLASS_NAME);
+        } else {
+            writer.println("authorizer.class.name=" + KafkaAuthorizationSimple.AUTHORIZER_CLASS_NAME);
+        }
 
-            // User configured super users
-            if (simpleAuthz.getSuperUsers() != null && simpleAuthz.getSuperUsers().size() > 0) {
-                superUsers.addAll(simpleAuthz.getSuperUsers().stream().map(e -> String.format("User:%s", e)).collect(Collectors.toList()));
-            }
-        } else if (KafkaAuthorizationOpa.TYPE_OPA.equals(authorization.getType())) {
-            KafkaAuthorizationOpa opaAuthz = (KafkaAuthorizationOpa) authorization;
-            writer.println("authorizer.class.name=" + KafkaAuthorizationOpa.AUTHORIZER_CLASS_NAME);
+        // User configured super-users
+        if (authorization.getSuperUsers() != null && authorization.getSuperUsers().size() > 0) {
+            superUsers.addAll(authorization.getSuperUsers().stream().map(e -> String.format("User:%s", e)).toList());
+        }
+    }
 
-            writer.println(String.format("%s=%s", "opa.authorizer.url", opaAuthz.getUrl()));
-            writer.println(String.format("%s=%b", "opa.authorizer.allow.on.error", opaAuthz.isAllowOnError()));
-            writer.println(String.format("%s=%b", "opa.authorizer.metrics.enabled", opaAuthz.isEnableMetrics()));
-            writer.println(String.format("%s=%d", "opa.authorizer.cache.initial.capacity", opaAuthz.getInitialCacheCapacity()));
-            writer.println(String.format("%s=%d", "opa.authorizer.cache.maximum.size", opaAuthz.getMaximumCacheSize()));
-            writer.println(String.format("%s=%d", "opa.authorizer.cache.expire.after.seconds", Duration.ofMillis(opaAuthz.getExpireAfterMs()).getSeconds()));
+    /**
+     * Configures Open Policy Agent (OPA) authorization
+     *
+     * @param authorization     OPA authorization configuration
+     * @param superUsers        Super-users list who have all the rights on the cluster
+     */
+    private void configureOpaAuthorization(KafkaAuthorizationOpa authorization, List<String> superUsers) {
+        writer.println("authorizer.class.name=" + KafkaAuthorizationOpa.AUTHORIZER_CLASS_NAME);
 
-            // User configured super users
-            if (opaAuthz.getSuperUsers() != null && opaAuthz.getSuperUsers().size() > 0) {
-                superUsers.addAll(opaAuthz.getSuperUsers().stream().map(e -> String.format("User:%s", e)).collect(Collectors.toList()));
-            }
-        } else if (KafkaAuthorizationKeycloak.TYPE_KEYCLOAK.equals(authorization.getType())) {
-            KafkaAuthorizationKeycloak keycloakAuthz = (KafkaAuthorizationKeycloak) authorization;
-            writer.println("authorizer.class.name=" + KafkaAuthorizationKeycloak.AUTHORIZER_CLASS_NAME);
-            writer.println("strimzi.authorization.token.endpoint.uri=" + keycloakAuthz.getTokenEndpointUri());
-            writer.println("strimzi.authorization.client.id=" + keycloakAuthz.getClientId());
-            writer.println("strimzi.authorization.delegate.to.kafka.acl=" + keycloakAuthz.isDelegateToKafkaAcls());
-            addOption(writer, "strimzi.authorization.grants.refresh.period.seconds", keycloakAuthz.getGrantsRefreshPeriodSeconds());
-            addOption(writer, "strimzi.authorization.grants.refresh.pool.size", keycloakAuthz.getGrantsRefreshPoolSize());
-            addOption(writer, "strimzi.authorization.connect.timeout.seconds", keycloakAuthz.getConnectTimeoutSeconds());
-            addOption(writer, "strimzi.authorization.read.timeout.seconds", keycloakAuthz.getReadTimeoutSeconds());
-            writer.println("strimzi.authorization.kafka.cluster.name=" + clusterName);
+        writer.println(String.format("%s=%s", "opa.authorizer.url", authorization.getUrl()));
+        writer.println(String.format("%s=%b", "opa.authorizer.allow.on.error", authorization.isAllowOnError()));
+        writer.println(String.format("%s=%b", "opa.authorizer.metrics.enabled", authorization.isEnableMetrics()));
+        writer.println(String.format("%s=%d", "opa.authorizer.cache.initial.capacity", authorization.getInitialCacheCapacity()));
+        writer.println(String.format("%s=%d", "opa.authorizer.cache.maximum.size", authorization.getMaximumCacheSize()));
+        writer.println(String.format("%s=%d", "opa.authorizer.cache.expire.after.seconds", Duration.ofMillis(authorization.getExpireAfterMs()).getSeconds()));
 
-            if (keycloakAuthz.getTlsTrustedCertificates() != null && keycloakAuthz.getTlsTrustedCertificates().size() > 0)    {
-                writer.println("strimzi.authorization.ssl.truststore.location=/tmp/kafka/authz-keycloak.truststore.p12");
-                writer.println("strimzi.authorization.ssl.truststore.password=" + PLACEHOLDER_CERT_STORE_PASSWORD);
-                writer.println("strimzi.authorization.ssl.truststore.type=PKCS12");
-                writer.println("strimzi.authorization.ssl.secure.random.implementation=SHA1PRNG");
-                String endpointIdentificationAlgorithm = keycloakAuthz.isDisableTlsHostnameVerification() ? "" : "HTTPS";
-                writer.println("strimzi.authorization.ssl.endpoint.identification.algorithm=" + endpointIdentificationAlgorithm);
-            }
+        if (authorization.getTlsTrustedCertificates() != null && authorization.getTlsTrustedCertificates().size() > 0)    {
+            writer.println("opa.authorizer.truststore.path=/tmp/kafka/authz-opa.truststore.p12");
+            writer.println("opa.authorizer.truststore.password=" + PLACEHOLDER_CERT_STORE_PASSWORD);
+            writer.println("opa.authorizer.truststore.type=PKCS12");
+        }
 
-            // User configured super users
-            if (keycloakAuthz.getSuperUsers() != null && keycloakAuthz.getSuperUsers().size() > 0) {
-                superUsers.addAll(keycloakAuthz.getSuperUsers().stream().map(e -> String.format("User:%s", e)).collect(Collectors.toList()));
-            }
-        } else if (KafkaAuthorizationCustom.TYPE_CUSTOM.equals(authorization.getType())) {
-            KafkaAuthorizationCustom customAuthz = (KafkaAuthorizationCustom) authorization;
-            writer.println("authorizer.class.name=" + customAuthz.getAuthorizerClass());
+        // User configured super-users
+        if (authorization.getSuperUsers() != null && authorization.getSuperUsers().size() > 0) {
+            superUsers.addAll(authorization.getSuperUsers().stream().map(e -> String.format("User:%s", e)).toList());
+        }
+    }
 
-            // User configured super users
-            if (customAuthz.getSuperUsers() != null && customAuthz.getSuperUsers().size() > 0) {
-                superUsers.addAll(customAuthz.getSuperUsers().stream().map(e -> String.format("User:%s", e)).collect(Collectors.toList()));
-            }
+    /**
+     * Configures Keycloak authorization
+     *
+     * @param clusterName       Name of the cluster
+     * @param authorization     Custom authorization configuration
+     * @param superUsers        Super-users list who have all the rights on the cluster
+     */
+    private void configureKeycloakAuthorization(String clusterName, KafkaAuthorizationKeycloak authorization, List<String> superUsers) {
+        writer.println("authorizer.class.name=" + KafkaAuthorizationKeycloak.AUTHORIZER_CLASS_NAME);
+        writer.println("strimzi.authorization.token.endpoint.uri=" + authorization.getTokenEndpointUri());
+        writer.println("strimzi.authorization.client.id=" + authorization.getClientId());
+        writer.println("strimzi.authorization.delegate.to.kafka.acl=" + authorization.isDelegateToKafkaAcls());
+        addOptionIfNotNull(writer, "strimzi.authorization.grants.refresh.period.seconds", authorization.getGrantsRefreshPeriodSeconds());
+        addOptionIfNotNull(writer, "strimzi.authorization.grants.refresh.pool.size", authorization.getGrantsRefreshPoolSize());
+        addOptionIfNotNull(writer, "strimzi.authorization.grants.max.idle.time.seconds", authorization.getGrantsMaxIdleTimeSeconds());
+        addOptionIfNotNull(writer, "strimzi.authorization.grants.gc.period.seconds", authorization.getGrantsGcPeriodSeconds());
+        addOptionIfNotNull(writer, "strimzi.authorization.connect.timeout.seconds", authorization.getConnectTimeoutSeconds());
+        addOptionIfNotNull(writer, "strimzi.authorization.read.timeout.seconds", authorization.getReadTimeoutSeconds());
+        addOptionIfNotNull(writer, "strimzi.authorization.http.retries", authorization.getHttpRetries());
+        if (authorization.isGrantsAlwaysLatest()) {
+            writer.println("strimzi.authorization.reuse.grants=false");
+        }
+        if (authorization.isEnableMetrics()) {
+            writer.println("strimzi.authorization.enable.metrics=true");
+        }
+
+        writer.println("strimzi.authorization.kafka.cluster.name=" + clusterName);
+
+        if (authorization.getTlsTrustedCertificates() != null && authorization.getTlsTrustedCertificates().size() > 0)    {
+            writer.println("strimzi.authorization.ssl.truststore.location=/tmp/kafka/authz-keycloak.truststore.p12");
+            writer.println("strimzi.authorization.ssl.truststore.password=" + PLACEHOLDER_CERT_STORE_PASSWORD);
+            writer.println("strimzi.authorization.ssl.truststore.type=PKCS12");
+            String endpointIdentificationAlgorithm = authorization.isDisableTlsHostnameVerification() ? "" : "HTTPS";
+            writer.println("strimzi.authorization.ssl.endpoint.identification.algorithm=" + endpointIdentificationAlgorithm);
+        }
+
+        // User configured super-users
+        if (authorization.getSuperUsers() != null && authorization.getSuperUsers().size() > 0) {
+            superUsers.addAll(authorization.getSuperUsers().stream().map(e -> String.format("User:%s", e)).toList());
+        }
+    }
+
+    /**
+     * Configures custom authorization
+     *
+     * @param authorization     Custom authorization configuration
+     * @param superUsers        Super-users list who have all the rights on the cluster
+     */
+    private void configureCustomAuthorization(KafkaAuthorizationCustom authorization, List<String> superUsers) {
+        writer.println("authorizer.class.name=" + authorization.getAuthorizerClass());
+
+        // User configured super-users
+        if (authorization.getSuperUsers() != null && authorization.getSuperUsers().size() > 0) {
+            superUsers.addAll(authorization.getSuperUsers().stream().map(e -> String.format("User:%s", e)).toList());
         }
     }
 
     /**
      * Configures the configuration options passed by the user in the Kafka CR.
      *
-     * @param userConfig    The User configuration - Kafka broker configuration options specified by the user in the Kafka custom resource
+     * @param userConfig                The User configuration - Kafka broker configuration options specified by the user in the Kafka custom resource
+     * @param injectCcMetricsReporter   Inject the Cruise Control Metrics Reporter into the configuration
      *
-     * @return  Returns the builder instance
+     * @return Returns the builder instance
      */
-    public KafkaBrokerConfigurationBuilder withUserConfiguration(AbstractConfiguration userConfig)  {
+    public KafkaBrokerConfigurationBuilder withUserConfiguration(KafkaConfiguration userConfig, boolean injectCcMetricsReporter)  {
         if (userConfig != null && !userConfig.getConfiguration().isEmpty()) {
+            if (injectCcMetricsReporter)  {
+                // We have to create a copy of the configuration before we modify it
+                userConfig = new KafkaConfiguration(userConfig);
+
+                // We configure the Cruise Control Metrics Reporter is needed
+                if (userConfig.getConfigOption(CruiseControlMetricsReporter.KAFKA_METRIC_REPORTERS_CONFIG_FIELD) != null) {
+                    if (!userConfig.getConfigOption(CruiseControlMetricsReporter.KAFKA_METRIC_REPORTERS_CONFIG_FIELD).contains(CruiseControlMetricsReporter.CRUISE_CONTROL_METRIC_REPORTER)) {
+                        userConfig.setConfigOption(CruiseControlMetricsReporter.KAFKA_METRIC_REPORTERS_CONFIG_FIELD, userConfig.getConfigOption(CruiseControlMetricsReporter.KAFKA_METRIC_REPORTERS_CONFIG_FIELD) + "," + CruiseControlMetricsReporter.CRUISE_CONTROL_METRIC_REPORTER);
+                    }
+                } else {
+                    userConfig.setConfigOption(CruiseControlMetricsReporter.KAFKA_METRIC_REPORTERS_CONFIG_FIELD, CruiseControlMetricsReporter.CRUISE_CONTROL_METRIC_REPORTER);
+                }
+            }
+
             printSectionHeader("User provided configuration");
             writer.println(userConfig.getConfiguration());
+            writer.println();
+        } else if (injectCcMetricsReporter) {
+            // There is no user provided configuration. But we still need to inject the Cruise Control Metrics Reporter
+            printSectionHeader("Cruise Control Metrics Reporter");
+            writer.println(CruiseControlMetricsReporter.KAFKA_METRIC_REPORTERS_CONFIG_FIELD + "=" + CruiseControlMetricsReporter.CRUISE_CONTROL_METRIC_REPORTER);
             writer.println();
         }
 
@@ -735,8 +814,8 @@ public class KafkaBrokerConfigurationBuilder {
     }
 
     /**
-     * Internal method which prints the section header into the configuration file. This makes it more human readable
-     * when looking for issues in runnign pods etc.
+     * Internal method which prints the section header into the configuration file. This makes it more human-readable
+     * when looking for issues in running pods etc.
      *
      * @param sectionName   Name of the section for which is this header printed
      */
