@@ -4,35 +4,13 @@
  */
 package io.strimzi.operator.common;
 
-import io.fabric8.kubernetes.api.model.ConfigMap;
 import io.fabric8.kubernetes.api.model.HasMetadata;
 import io.fabric8.kubernetes.api.model.LabelSelector;
 import io.fabric8.kubernetes.api.model.Secret;
-import io.strimzi.api.kafka.model.CertSecretSource;
-import io.strimzi.api.kafka.model.ExternalLogging;
-import io.strimzi.api.kafka.model.GenericSecretSource;
-import io.strimzi.api.kafka.model.JmxPrometheusExporterMetrics;
-import io.strimzi.api.kafka.model.Logging;
-import io.strimzi.api.kafka.model.MetricsConfig;
-import io.strimzi.api.kafka.model.authentication.KafkaClientAuthentication;
-import io.strimzi.api.kafka.model.authentication.KafkaClientAuthenticationOAuth;
-import io.strimzi.api.kafka.model.authentication.KafkaClientAuthenticationPlain;
-import io.strimzi.api.kafka.model.authentication.KafkaClientAuthenticationScram;
-import io.strimzi.api.kafka.model.authentication.KafkaClientAuthenticationTls;
-import io.strimzi.certs.CertAndKey;
-import io.strimzi.operator.cluster.model.InvalidResourceException;
+import io.strimzi.operator.common.model.InvalidResourceException;
 import io.strimzi.operator.common.model.Labels;
 import io.strimzi.operator.common.model.OrderedProperties;
-import io.strimzi.operator.common.operator.resource.ConfigMapOperator;
-import io.strimzi.operator.common.operator.resource.SecretOperator;
-import io.strimzi.operator.common.operator.resource.TimeoutException;
-import io.vertx.core.CompositeFuture;
-import io.vertx.core.Future;
-import io.vertx.core.Handler;
-import io.vertx.core.Promise;
-import io.vertx.core.Vertx;
-import java.time.Instant;
-import org.apache.kafka.common.KafkaFuture;
+
 import org.apache.kafka.common.config.ConfigResource;
 import org.quartz.CronExpression;
 
@@ -52,128 +30,61 @@ import java.security.NoSuchAlgorithmException;
 import java.security.cert.CertificateException;
 import java.security.cert.X509Certificate;
 import java.text.ParseException;
-import java.util.ArrayList;
+import java.time.Instant;
 import java.util.Base64;
 import java.util.Collections;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Optional;
 import java.util.Set;
 import java.util.StringTokenizer;
 import java.util.TimeZone;
 import java.util.TreeMap;
-import java.util.function.BooleanSupplier;
-import java.util.function.Predicate;
-import java.util.function.Supplier;
+import java.util.concurrent.CompletionException;
+import java.util.concurrent.CompletionStage;
+import java.util.function.BiConsumer;
 import java.util.stream.Collectors;
 
+/**
+ * Class with various utility methods
+ */
 @SuppressWarnings({"checkstyle:ClassFanOutComplexity"})
 public class Util {
     private static final ReconciliationLogger LOGGER = ReconciliationLogger.create(Util.class);
 
-    public static <T> Future<T> async(Vertx vertx, Supplier<T> supplier) {
-        Promise<T> result = Promise.promise();
-        vertx.executeBlocking(
-            future -> {
-                try {
-                    future.complete(supplier.get());
-                } catch (Throwable t) {
-                    future.fail(t);
-                }
-            }, result
-        );
-        return result.future();
+    /**
+     * Length of a hash stub. One example usage is when generating an annotation with a certificate short thumbprint.
+     */
+    public static final int HASH_STUB_LENGTH = 8;
+
+    /**
+     * Wrap the given action with a BiConsumer that {@link #unwrap(Throwable)
+     * unwrap}s the error, if any. This method is meant to wrap the action typically
+     * passed to {@link CompletionStage#whenComplete(BiConsumer)}.
+     *
+     * @param <T>    type of the asynchronous result
+     * @param action action to be wrapped, expecting the cause of any
+     *               {@link CompletionException} as its second argument
+     * @return a BiConsumer to delegate to the provided action
+     */
+    public static <T> BiConsumer<T, Throwable> unwrap(BiConsumer<T, Throwable> action) {
+        return (result, error) -> action.accept(result, unwrap(error));
     }
 
     /**
-     * Invoke the given {@code completed} supplier on a pooled thread approximately every {@code pollIntervalMs}
-     * milliseconds until it returns true or {@code timeoutMs} milliseconds have elapsed.
-     * @param reconciliation The reconciliation
-     * @param vertx The vertx instance.
-     * @param logContext A string used for context in logging.
-     * @param logState The state we are waiting for use in log messages
-     * @param pollIntervalMs The poll interval in milliseconds.
-     * @param timeoutMs The timeout, in milliseconds.
-     * @param completed Determines when the wait is complete by returning true.
-     * @return A future that completes when the given {@code completed} indicates readiness.
+     * Returns the cause when the given Throwable is a {@link CompletionException}.
+     * Otherwise the error is returned unchanged.
+     *
+     * @param error any Throwable
+     * @return the cause when error is a {@link CompletionException}, else the same
+     *         Throwable
      */
-    public static Future<Void> waitFor(Reconciliation reconciliation, Vertx vertx, String logContext, String logState, long pollIntervalMs, long timeoutMs, BooleanSupplier completed) {
-        return waitFor(reconciliation, vertx, logContext, logState, pollIntervalMs, timeoutMs, completed, error -> false);
-    }
-
-    /**
-     * Invoke the given {@code completed} supplier on a pooled thread approximately every {@code pollIntervalMs}
-     * milliseconds until it returns true or {@code timeoutMs} milliseconds have elapsed.
-     * @param reconciliation The reconciliation
-     * @param vertx The vertx instance.
-     * @param logContext A string used for context in logging.
-     * @param logState The state we are waiting for use in log messages
-     * @param pollIntervalMs The poll interval in milliseconds.
-     * @param timeoutMs The timeout, in milliseconds.
-     * @param completed Determines when the wait is complete by returning true.
-     * @param failOnError Determine whether a given error thrown by {@code completed},
-     *                    should result in the immediate completion of the returned Future.
-     * @return A future that completes when the given {@code completed} indicates readiness.
-     */
-    public static Future<Void> waitFor(Reconciliation reconciliation, Vertx vertx, String logContext, String logState, long pollIntervalMs, long timeoutMs, BooleanSupplier completed,
-                                       Predicate<Throwable> failOnError) {
-        Promise<Void> promise = Promise.promise();
-        LOGGER.debugCr(reconciliation, "Waiting for {} to get {}", logContext, logState);
-        long deadline = System.currentTimeMillis() + timeoutMs;
-        Handler<Long> handler = new Handler<Long>() {
-            @Override
-            public void handle(Long timerId) {
-                vertx.createSharedWorkerExecutor("kubernetes-ops-pool").executeBlocking(
-                    future -> {
-                        try {
-                            if (completed.getAsBoolean())   {
-                                future.complete();
-                            } else {
-                                LOGGER.traceCr(reconciliation, "{} is not {}", logContext, logState);
-                                future.fail("Not " + logState + " yet");
-                            }
-                        } catch (Throwable e) {
-                            LOGGER.warnCr(reconciliation, "Caught exception while waiting for {} to get {}", logContext, logState, e);
-                            future.fail(e);
-                        }
-                    },
-                    true,
-                    res -> {
-                        if (res.succeeded()) {
-                            LOGGER.debugCr(reconciliation, "{} is {}", logContext, logState);
-                            promise.complete();
-                        } else {
-                            if (failOnError.test(res.cause())) {
-                                promise.fail(res.cause());
-                            } else {
-                                long timeLeft = deadline - System.currentTimeMillis();
-                                if (timeLeft <= 0) {
-                                    String exceptionMessage = String.format("Exceeded timeout of %dms while waiting for %s to be %s", timeoutMs, logContext, logState);
-                                    LOGGER.errorCr(reconciliation, exceptionMessage);
-                                    promise.fail(new TimeoutException(exceptionMessage));
-                                } else {
-                                    // Schedule ourselves to run again
-                                    vertx.setTimer(Math.min(pollIntervalMs, timeLeft), this);
-                                }
-                            }
-                        }
-                    }
-                );
-            }
-        };
-
-        // Call the handler ourselves the first time
-        handler.handle(null);
-
-        return promise.future();
-    }
-
-    // Wrapper to minimise usage of raw types in code using composite futures
-    @SuppressWarnings({"unchecked", "rawtypes"})
-    public static CompositeFuture compositeFuture(List<?> futures) {
-        return CompositeFuture.join((List<Future>) futures);
+    public static Throwable unwrap(Throwable error) {
+        if (error instanceof CompletionException wrapped) {
+            return wrapped.getCause();
+        }
+        return error;
     }
 
     /**
@@ -230,7 +141,7 @@ public class Util {
     public static File createFileStore(String prefix, String suffix, byte[] bytes) {
         File f = null;
         try {
-            f = File.createTempFile(prefix, suffix);
+            f = Files.createTempFile(prefix, suffix).toFile();
             f.deleteOnExit();
             try (OutputStream os = new BufferedOutputStream(new FileOutputStream(f))) {
                 os.write(bytes);
@@ -267,13 +178,12 @@ public class Util {
      */
     public static File createFileTrustStore(String prefix, String suffix, Set<X509Certificate> certificates, char[] password) {
         try {
-            KeyStore trustStore = null;
-            trustStore = KeyStore.getInstance("PKCS12");
+            KeyStore trustStore = KeyStore.getInstance("PKCS12");
             trustStore.load(null, password);
 
             int aliasIndex = 0;
             for (X509Certificate certificate : certificates) {
-                trustStore.setEntry(certificate.getSubjectDN().getName() + "-" + aliasIndex, new KeyStore.TrustedCertificateEntry(certificate), null);
+                trustStore.setEntry(certificate.getSubjectX500Principal().getName() + "-" + aliasIndex, new KeyStore.TrustedCertificateEntry(certificate), null);
                 aliasIndex++;
             }
 
@@ -286,7 +196,7 @@ public class Util {
     private static File store(String prefix, String suffix, KeyStore trustStore, char[] password) throws Exception {
         File f = null;
         try {
-            f = File.createTempFile(prefix, suffix);
+            f = Files.createTempFile(prefix, suffix).toFile();
             f.deleteOnExit();
             try (OutputStream os = new BufferedOutputStream(new FileOutputStream(f))) {
                 trustStore.store(os, password);
@@ -311,7 +221,7 @@ public class Util {
             sb.append("\t").append(entry.getKey()).append(": ").append(maskPassword(entry.getKey(), entry.getValue())).append("\n");
         }
 
-        LOGGER.infoOp("Using config:\n" + sb.toString());
+        LOGGER.infoOp("Using config:\n" + sb);
     }
 
     /**
@@ -357,9 +267,9 @@ public class Util {
                     .keySet()
                     .stream()
                     .filter(key -> key.startsWith(Labels.STRIMZI_DOMAIN))
-                    .collect(Collectors.toList());
+                    .toList();
                 if (bannedLabelsOrAnnotations.size() > 0) {
-                    throw new InvalidResourceException("User provided labels or annotations includes a Strimzi annotation: " + bannedLabelsOrAnnotations.toString());
+                    throw new InvalidResourceException("User provided labels or annotations includes a Strimzi annotation: " + bannedLabelsOrAnnotations);
                 }
 
                 Map<String, String> filteredToMerge = toMerge
@@ -376,46 +286,46 @@ public class Util {
         return merged;
     }
 
-    public static <T> Future<T> kafkaFutureToVertxFuture(Vertx vertx, KafkaFuture<T> kf) {
-        return kafkaFutureToVertxFuture(null, vertx, kf);
-    }
-
-    public static <T> Future<T> kafkaFutureToVertxFuture(Reconciliation reconciliation, Vertx vertx, KafkaFuture<T> kf) {
-        Promise<T> promise = Promise.promise();
-        if (kf != null) {
-            kf.whenComplete((result, error) -> {
-                vertx.runOnContext(ignored -> {
-                    if (error != null) {
-                        promise.fail(error);
-                    } else {
-                        promise.complete(result);
-                    }
-                });
-            });
-            return promise.future();
-        } else {
-            if (reconciliation != null) {
-                LOGGER.traceCr(reconciliation, "KafkaFuture is null");
-            } else {
-                LOGGER.traceOp("KafkaFuture is null");
-            }
-
-            return Future.succeededFuture();
-        }
-    }
-
+    /**
+     * Created config resource instance
+     *
+     * @param podId Pod ID
+     *
+     * @return  Config resource
+     */
     public static ConfigResource getBrokersConfig(int podId) {
         return Util.getBrokersConfig(Integer.toString(podId));
     }
 
+    /**
+     * Created config resource instance
+     *
+     * @param podId Pod ID
+     *
+     * @return  Config resource
+     */
     public static ConfigResource getBrokersLogging(int podId) {
         return Util.getBrokersLogging(Integer.toString(podId));
     }
 
+    /**
+     * Created config resource instance
+     *
+     * @param podId Pod ID
+     *
+     * @return  Config resource
+     */
     public static ConfigResource getBrokersConfig(String podId) {
         return new ConfigResource(ConfigResource.Type.BROKER, podId);
     }
 
+    /**
+     * Created config resource instance
+     *
+     * @param podId Pod ID
+     *
+     * @return  Config resource
+     */
     public static ConfigResource getBrokersLogging(String podId) {
         return new ConfigResource(ConfigResource.Type.BROKER_LOGGER, podId);
     }
@@ -469,7 +379,7 @@ public class Util {
         int startIdx;
         int prefixLen = "${".length();
         while ((startIdx = value.indexOf("${", endIdx + 1)) != -1) {
-            sb.append(value.substring(endIdx + 1, startIdx));
+            sb.append(value, endIdx + 1, startIdx);
             endIdx = value.indexOf("}", startIdx + prefixLen);
             if (endIdx != -1) {
                 String key = value.substring(startIdx + prefixLen, endIdx);
@@ -498,127 +408,31 @@ public class Util {
      * Gets the first 8 characters from a SHA-1 hash of the provided byte array
      *
      * @param   toBeHashed  Byte array for which the hash will be returned
-     *
      * @return              First 8 characters of the SHA-1 hash
      */
     public static String hashStub(byte[] toBeHashed)   {
+        byte[] digest = sha1Digest(toBeHashed);
+        return String.format("%040x", new BigInteger(1, digest)).substring(0, HASH_STUB_LENGTH);
+    }
+
+    /**
+     * Get a SHA-1 hash of the provided byte array
+     *
+     * @param toBeHashed    Byte array for which the hash will be returned
+     * @return              SHA-1 hash
+     */
+    public static byte[] sha1Digest(byte[] toBeHashed) {
         try {
             // This is used to generate unique identifier which is not used for security => using SHA-1 is ok
             MessageDigest sha1 = MessageDigest.getInstance("SHA-1");
-            byte[] digest = sha1.digest(toBeHashed);
-
-            return String.format("%040x", new BigInteger(1, digest)).substring(0, 8);
+            return sha1.digest(toBeHashed);
         } catch (NoSuchAlgorithmException e) {
             throw new RuntimeException("Failed to get SHA-1 hash", e);
         }
     }
 
-    public static Future<ConfigMap> getExternalLoggingCm(ConfigMapOperator configMapOperations, String namespace, ExternalLogging logging) {
-        Future<ConfigMap> loggingCmFut;
-        if (logging.getValueFrom() != null
-                && logging.getValueFrom().getConfigMapKeyRef() != null
-                && logging.getValueFrom().getConfigMapKeyRef().getName() != null) {
-            loggingCmFut = configMapOperations.getAsync(namespace, logging.getValueFrom().getConfigMapKeyRef().getName());
-        } else {
-            loggingCmFut = Future.succeededFuture(null);
-        }
-        return loggingCmFut;
-    }
-
     /**
-     * When TLS certificate or Auth certificate (or password) is changed, the has is computed.
-     * It is used for rolling updates.
-     * @param secretOperations Secret operator
-     * @param namespace namespace to get Secrets in
-     * @param auth Authentication object to compute hash from
-     * @param certSecretSources TLS trusted certificates whose hashes are joined to result
-     * @return Future computing hash from TLS + Auth
-     */
-    public static Future<Integer> authTlsHash(SecretOperator secretOperations, String namespace, KafkaClientAuthentication auth, List<CertSecretSource> certSecretSources) {
-        Future<Integer> tlsFuture;
-        if (certSecretSources == null || certSecretSources.isEmpty()) {
-            tlsFuture = Future.succeededFuture(0);
-        } else {
-            // get all TLS trusted certs, compute hash from each of them, sum hashes
-            tlsFuture = CompositeFuture.join(certSecretSources.stream().map(certSecretSource ->
-                    getCertificateAsync(secretOperations, namespace, certSecretSource)
-                    .compose(cert -> Future.succeededFuture(cert.hashCode()))).collect(Collectors.toList()))
-                .compose(hashes -> Future.succeededFuture(hashes.list().stream().collect(Collectors.summingInt(e -> (int) e))));
-        }
-
-        if (auth == null) {
-            return tlsFuture;
-        } else {
-            // compute hash from Auth
-            if (auth instanceof KafkaClientAuthenticationScram) {
-                // only passwordSecret can be changed
-                return tlsFuture.compose(tlsHash -> getPasswordAsync(secretOperations, namespace, auth)
-                        .compose(password -> Future.succeededFuture(password.hashCode() + tlsHash)));
-            } else if (auth instanceof KafkaClientAuthenticationPlain) {
-                // only passwordSecret can be changed
-                return tlsFuture.compose(tlsHash -> getPasswordAsync(secretOperations, namespace, auth)
-                        .compose(password -> Future.succeededFuture(password.hashCode() + tlsHash)));
-            } else if (auth instanceof KafkaClientAuthenticationTls) {
-                // custom cert can be used (and changed)
-                return ((KafkaClientAuthenticationTls) auth).getCertificateAndKey() == null ? tlsFuture :
-                        tlsFuture.compose(tlsHash -> getCertificateAndKeyAsync(secretOperations, namespace, (KafkaClientAuthenticationTls) auth)
-                        .compose(crtAndKey -> Future.succeededFuture(crtAndKey.certAsBase64String().hashCode() + crtAndKey.keyAsBase64String().hashCode() + tlsHash)));
-            } else if (auth instanceof KafkaClientAuthenticationOAuth) {
-                List<Future> futureList = ((KafkaClientAuthenticationOAuth) auth).getTlsTrustedCertificates() == null ?
-                        new ArrayList<>() : ((KafkaClientAuthenticationOAuth) auth).getTlsTrustedCertificates().stream().map(certSecretSource ->
-                        getCertificateAsync(secretOperations, namespace, certSecretSource)
-                                .compose(cert -> Future.succeededFuture(cert.hashCode()))).collect(Collectors.toList());
-                futureList.add(tlsFuture);
-                futureList.add(addSecretHash(secretOperations, namespace, ((KafkaClientAuthenticationOAuth) auth).getAccessToken()));
-                futureList.add(addSecretHash(secretOperations, namespace, ((KafkaClientAuthenticationOAuth) auth).getClientSecret()));
-                futureList.add(addSecretHash(secretOperations, namespace, ((KafkaClientAuthenticationOAuth) auth).getRefreshToken()));
-                return CompositeFuture.join(futureList)
-                        .compose(hashes -> Future.succeededFuture(hashes.list().stream().collect(Collectors.summingInt(e -> (int) e))));
-            } else {
-                // unknown Auth type
-                return tlsFuture;
-            }
-        }
-    }
-
-    private static Future<Integer> addSecretHash(SecretOperator secretOperations, String namespace, GenericSecretSource genericSecretSource) {
-        if (genericSecretSource != null) {
-            return secretOperations.getAsync(namespace, genericSecretSource.getSecretName())
-                    .compose(secret -> {
-                        if (secret == null) {
-                            return Future.failedFuture("Secret " + genericSecretSource.getSecretName() + " not found");
-                        } else {
-                            return Future.succeededFuture(secret.getData().get(genericSecretSource.getKey()).hashCode());
-                        }
-                    });
-        }
-        return Future.succeededFuture(0);
-    }
-
-    public static Future<MetricsAndLogging> metricsAndLogging(Reconciliation reconciliation,
-                                                              ConfigMapOperator configMapOperations,
-                                                              String namespace,
-                                                              Logging logging, MetricsConfig metricsConfigInCm) {
-        List<Future> configMaps = new ArrayList<>(2);
-        if (metricsConfigInCm instanceof JmxPrometheusExporterMetrics) {
-            configMaps.add(configMapOperations.getAsync(namespace, ((JmxPrometheusExporterMetrics) metricsConfigInCm).getValueFrom().getConfigMapKeyRef().getName()));
-        } else if (metricsConfigInCm == null) {
-            configMaps.add(Future.succeededFuture(null));
-        } else {
-            LOGGER.warnCr(reconciliation, "Unknown metrics type {}", metricsConfigInCm.getType());
-            throw new InvalidResourceException("Unknown metrics type " + metricsConfigInCm.getType());
-        }
-
-        if (logging instanceof ExternalLogging) {
-            configMaps.add(Util.getExternalLoggingCm(configMapOperations, namespace, (ExternalLogging) logging));
-        } else {
-            configMaps.add(Future.succeededFuture(null));
-        }
-        return CompositeFuture.join(configMaps).map(result -> new MetricsAndLogging(result.resultAt(0), result.resultAt(1)));
-    }
-
-    /**
-     * Checks if the Kubernetes resource matches LabelSelector. This is useful when you use get/getAsync to retrieve an
+     * Checks if the Kubernetes resource matches LabelSelector. This is useful when you use get/getAsync to retrieve a
      * resource and want to check if it matches the labels from the selector (since get/getAsync is using name and not
      * labels to identify the resource). This method currently supports only the matchLabels object. matchExpressions
      * array is not supported.
@@ -628,18 +442,23 @@ public class Util {
      *
      * @return              True if the resource contains all labels from the LabelSelector or if the LabelSelector is empty
      */
-    public static boolean matchesSelector(Optional<LabelSelector> labelSelector, HasMetadata cr) {
-        if (labelSelector.isPresent()) {
+    public static boolean matchesSelector(LabelSelector labelSelector, HasMetadata cr) {
+        if (labelSelector != null && labelSelector.getMatchLabels() != null) {
             if (cr.getMetadata().getLabels() != null) {
-                return cr.getMetadata().getLabels().entrySet().containsAll(labelSelector.get().getMatchLabels().entrySet());
+                return cr.getMetadata().getLabels().entrySet().containsAll(labelSelector.getMatchLabels().entrySet());
             } else {
-                return labelSelector.get().getMatchLabels().isEmpty();
+                return labelSelector.getMatchLabels().isEmpty();
             }
         }
 
         return true;
     }
 
+    /**
+     * Deleted a file from the filesystem
+     *
+     * @param key   Path to the file which should be deleted
+     */
     public static void delete(Path key) {
         if (key != null) {
             try {
@@ -647,66 +466,6 @@ public class Util {
             } catch (IOException e) {
                 e.printStackTrace();
             }
-        }
-    }
-
-    /**
-     * Utility method which gets the secret and validates that the required fields are present in it
-     *
-     * @param secretOperator    Secret operator to get the secret from the Kubernetes API
-     * @param namespace         Namespace where the Secret exist
-     * @param name              Name of the Secret
-     * @param items             List of items which should be present in the Secret
-     *
-     * @return      Future with the Secret if is exits and has the required items. Failed future with an error message otherwise.
-     */
-    /* test */ static Future<Secret> getValidatedSecret(SecretOperator secretOperator, String namespace, String name, String... items)  {
-        return secretOperator.getAsync(namespace, name)
-                .compose(secret -> {
-                    if (secret == null) {
-                        return Future.failedFuture(new InvalidConfigurationException("Secret " + name + " not found"));
-                    } else {
-                        List<String> errors = new ArrayList<>(0);
-
-                        for (String item : items)   {
-                            if (!secret.getData().containsKey(item))    {
-                                // Item not found => error will be raised
-                                errors.add(item);
-                            }
-                        }
-
-                        if (errors.isEmpty()) {
-                            return Future.succeededFuture(secret);
-                        } else {
-                            return Future.failedFuture(new InvalidConfigurationException(String.format("Items with key(s) %s are missing in Secret %s", errors, name)));
-                        }
-                    }
-                });
-    }
-
-    private static Future<String> getCertificateAsync(SecretOperator secretOperator, String namespace, CertSecretSource certSecretSource) {
-        return getValidatedSecret(secretOperator, namespace, certSecretSource.getSecretName(), certSecretSource.getCertificate())
-                .compose(secret -> Future.succeededFuture(secret.getData().get(certSecretSource.getCertificate())));
-    }
-
-    private static Future<CertAndKey> getCertificateAndKeyAsync(SecretOperator secretOperator, String namespace, KafkaClientAuthenticationTls auth) {
-        return getValidatedSecret(secretOperator, namespace, auth.getCertificateAndKey().getSecretName(), auth.getCertificateAndKey().getCertificate(), auth.getCertificateAndKey().getKey())
-                .compose(secret -> Future.succeededFuture(new CertAndKey(secret.getData().get(auth.getCertificateAndKey().getKey()).getBytes(StandardCharsets.UTF_8), secret.getData().get(auth.getCertificateAndKey().getCertificate()).getBytes(StandardCharsets.UTF_8))));
-    }
-
-    private static Future<String> getPasswordAsync(SecretOperator secretOperator, String namespace, KafkaClientAuthentication auth) {
-        if (auth instanceof KafkaClientAuthenticationPlain) {
-            KafkaClientAuthenticationPlain plainAuth = (KafkaClientAuthenticationPlain) auth;
-
-            return getValidatedSecret(secretOperator, namespace, plainAuth.getPasswordSecret().getSecretName(), plainAuth.getPasswordSecret().getPassword())
-                    .compose(secret -> Future.succeededFuture(secret.getData().get(plainAuth.getPasswordSecret().getPassword())));
-        } else if (auth instanceof KafkaClientAuthenticationScram) {
-            KafkaClientAuthenticationScram scramAuth = (KafkaClientAuthenticationScram) auth;
-
-            return getValidatedSecret(secretOperator, namespace, scramAuth.getPasswordSecret().getSecretName(), scramAuth.getPasswordSecret().getPassword())
-                    .compose(secret -> Future.succeededFuture(secret.getData().get(scramAuth.getPasswordSecret().getPassword())));
-        } else {
-            return Future.failedFuture("Auth type " + auth.getType() + " does not have a password property");
         }
     }
 
